--- a/autosuggest_collect.py.ipynb
+++ b/autosuggest_collect.py.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "import pandas as pd\n",
     "import datetime\n",
-    "import goslate\n",
+    "#import goslate\n",
     "import itertools\n",
     "import os\n",
     "\n",
